<resources>
    <string name="app_name">SnapStory</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Start capture your journey with us and transform ordinary moments into extraordinary memories. Get ready to explore and inspire with SnapStory!</string>
    <string name="title_welcome_page">Welcome to SnapStory!</string>
    <string name="title_signup_page">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Login</string>
    <string name="name">Name</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="user_name">User Name</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="image_of_story">Image of Story</string>
    <string name="passing_name">STORY_NAME</string>
    <string name="passing_desc">STORY_DESC</string>
    <string name="passing_image">STORY_IMAGE</string>
    <string name="failed_retrieve_msg">Failed to retrieve the data</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="desc_hint">Type your caption</string>
    <string name="upload_image_preview">Upload Image Preview</string>
    <string name="add_button">Button for add story</string>
    <string name="splash_description">Splash Screen</string>
    <string name="snapstory_logo">SnapStory Logo</string>
    <string name="register_name_hint">Enter your name</string>
    <string name="retry">Retry</string>
    <string name="login_success">Login successful. Welcome to the SnapStory!</string>
    <string name="login_failed">Login failed. Please try again!</string>
    <string name="register_success">Register successful. Please login to continue!</string>
    <string name="register_failed">Register failed. Please try again!</string>
    <string name="password_req">Password must not be less than 8 characters</string>
    <string name="email_req">Email is not valid, use the correct format</string>
    <string name="new_story">New Story</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>