<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:clickable="true"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/storyImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_of_story"
            android:src="@color/navy"
            app:layout_constraintBottom_toTopOf="@id/storyUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"/>

        <TextView
            android:id="@+id/storyUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_bold_semi"
            android:text="@string/user_name"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/storyImage"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"/>

        <TextView
            android:id="@+id/storyDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/storyUser"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
