<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="-110dp"
            android:background="@drawable/rounded_corner"
            android:importantForAccessibility="no" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/new_story"
                android:textAlignment="center"
                android:textColor="@color/vanilla"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/upload_image_preview"
                app:layout_constraintBottom_toTopOf="@+id/cameraButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pageTitle"
                app:srcCompat="@drawable/ic_place_holder" />

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_regular"
                android:backgroundTint="@color/navy"
                android:text="@string/camera"
                app:layout_constraintBottom_toTopOf="@+id/captionLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/galleryButton" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                android:fontFamily="@font/poppins_regular"
                android:backgroundTint="@color/navy"
                android:text="@string/gallery"
                app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
                app:layout_constraintEnd_toStartOf="@+id/cameraButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cameraButton" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/captionLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintBottom_toTopOf="@+id/uploadButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/captionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:autofillHints="Caption"
                    android:gravity="top"
                    android:ems="10"
                    android:hint="@string/desc_hint"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingHorizontal="20dp"
                    android:inputType="textMultiLine"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_regular"
                android:backgroundTint="@color/navy"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</ScrollView>
